[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scenes/ui/tuna_coin_display.gd" id="1_script"]

[sub_resource type="Gradient" id="Gradient_coin"]
colors = PackedColorArray(1.0, 0.84, 0.0, 1.0, 1.0, 0.84, 0.0, 1.0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_coin_icon"]
gradient = SubResource("Gradient_coin")
width = 24
height = 24
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1.0, 0.5)
fill = 1

; ============================================================
; Tuna Coin HUD â€” top-right coin counter
; ============================================================
[node name="TunaCoinDisplay" type="CanvasLayer"]
layer = 10
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 2

[node name="CoinIcon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_coin_icon")
stretch_mode = 2

[node name="CoinCount" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1.0, 0.84, 0.0, 1.0)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7)
theme_override_font_sizes/font_size = 28
text = "2"
